# daml

./: BUILD  CODEOWNERS  WORKSPACE  azure-pipelines.yml  build.ps1  build.sh  deps.bzl  navigator.history  reflog.txt  util.bzl
bazel_tools/: BUILD.bazel  haskell.bzl  scala.bzl
ci/: build-unix.yml  configure-bazel.sh
compiler/haskell-ide-core/: BUILD.bazel
compiler/haskell-ide-core/src/Development/IDE/State/: Shake.hs
daml-edsl/: Cash.hs  DAML.hs  Dvp.hs  FunDeps.hs  Fungible.hs  Ledger.hs  Mono.hs  Option.hs  Pizza.daml  Poly.hs  Proposal.hs  README.md  Referendum.hs  Transferrable.hs  TypFams.hs
daml-foundations/daml-tools/daml-extension/: package.json
daml-lf/testing-tools/: BUILD.bazel
daml-rules/: .gitignore  ChangeLog.md  README.md  package.yaml
daml-rules/app/: Main.hs
daml-rules/src/: Lib.hs
daml-rules/test/: Spec.hs
dev-env/windows/manifests/: bazel.json
docs/configs/pdf/: index.rst
docs/source/: index.rst
docs/source/app-dev/bindings-java/: codegen.rst
docs/source/app-dev/bindings-scala/: index.rst
docs/source/support/: release-notes.rst
language-support/scala/sandbox-control/: BUILD.bazel
ledger/ledger-api-integration-tests/: BUILD.bazel
ledger/ledger-api-server-example/src/main/scala/com/digitalasset/ledger/example/: Backend.scala
ledger/sandbox/: BUILD.bazel
ledger/sandbox/src/main/resources/db/migration/: V2__Contract_divulgence.sha256
ledger/sandbox/src/main/scala/com/digitalasset/platform/sandbox/: SandboxApplication.scala
nix/: bazelrc  packages.nix
nix/overrides/bazel/: default.nix
(+27 files in other folders)
