# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Export Bazel sources for Bazel API docs.
load(
    "@bazel_tools//tools/jdk:default_java_toolchain.bzl",
    "default_java_toolchain",
)

exports_files(
    [
        "haskell.bzl",
        "scala.bzl",
        "haskell-c2hs.patch",
        "haskell-static-linking.patch",
        "haskell-optp-response.patch",
        "haskell-arx.patch",
        "haskell-win-sys-includes.patch",
        "haskell-drop-fake-static.patch",
        "pom_template.xml",
    ],
    visibility = ["//:__subpackages__"],
)

default_java_toolchain(
    name = "toolchain_jdk11",
    # Without this we get the following warning:
    # warning: -parameters is not supported for target value 1.7. Use 1.8 or later.
    compatible_javacopts = {"proto": [
        "-source",
        "8",
        "-target",
        "8",
    ]},
    forcibly_disable_header_compilation = True,
    javabuilder = ["@bazel_tools//tools/jdk:vanillajavabuilder"],
    jvm_opts = [],
    visibility = ["//visibility:public"],
)
